[gd_scene load_steps=10 format=3 uid="uid://hje6ydgi6i87"]

[ext_resource type="Script" path="res://martha.gd" id="1_a55ri"]
[ext_resource type="Texture2D" uid="uid://2b6q15jnk54h" path="res://Mushroom-Idle.png" id="2_jfek0"]
[ext_resource type="PackedScene" uid="uid://bbpal2sbuotkw" path="res://interaction/interaction area/interaction_area.tscn" id="3_4nkuo"]
[ext_resource type="PackedScene" uid="uid://df8iwdmv6hryv" path="res://Scene/Scene/PersistentDataHandler/persistent_data_handler.tscn" id="4_wwjvq"]

[sub_resource type="Animation" id="Animation_xhpcl"]
resource_name = "Idle"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_imd1u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite2D:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8detp"]
_data = {
"Idle": SubResource("Animation_xhpcl"),
"RESET": SubResource("Animation_imd1u")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mq4dv"]
radius = 54.0093

[sub_resource type="CircleShape2D" id="CircleShape2D_njyce"]
radius = 54.5894

[node name="Martha" type="Node2D"]
script = ExtResource("1_a55ri")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_jfek0")
flip_h = true
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8detp")
}
autoplay = "Idle"

[node name="InteractionArea" parent="." instance=ExtResource("3_4nkuo")]
action_name = "Martha"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-1, 16)
shape = SubResource("CircleShape2D_mq4dv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 16)
shape = SubResource("CircleShape2D_njyce")

[node name="IsQuestComplete" parent="." instance=ExtResource("4_wwjvq")]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
